# muffins

./: .gitignore  abstractmachine.hs  bintransmit.hs  caesarcipher.hs  calculator.hs  chap12.hs  chap14.hs  countdown1.hs  countdown2.hs  guard.hs  hangman.hs  knight1.hs  knight2.hs  lazy.hs  life.hs  nim.hs  parser.hs  pierre.hs  qsort.hs  tautologycheck.hs  tictactoe.hs  voting1.hs  voting2.hs
httpserv/: README.md  httpserv.cabal
httpserv/src/: Main.hs
